--- a/Projet 2 - Systeme de recommandation de films/requirements.txt
+++ b/Projet 2 - Systeme de recommandation de films/requirements.txt
@@ -1,5 +1,6 @@
 category_encoders==2.6.3
-fuzzywuzzy==0.18.0
+rapidfuzz==3.1.1
+#fuzzywuzzy==0.18.0
 matplotlib==3.9.0
 numpy==1.26.4
 pandas==2.2.2
