--- a/Projet 2 - Systeme de recommandation de films/requirements.txt
+++ b/Projet 2 - Systeme de recommandation de films/requirements.txt
@@ -1,12 +1,11 @@
 category_encoders==2.6.3
-rapidfuzz==3.1.1
-#fuzzywuzzy==0.18.0
+fuzzywuzzy==0.18.0
 matplotlib==3.9.0
 numpy==1.26.4
 pandas==2.2.2
 Pillow==10.3.0
 plotly==5.22.0
-Requests==2.32.3
-scikit_learn==1.5.0
+requests==2.32.3
+scikit-learn==1.5.0
 seaborn==0.13.2
 streamlit==1.33.0
