--- a/Projet 2 - Systeme de recommandation de films/requirements.txt
+++ b/Projet 2 - Systeme de recommandation de films/requirements.txt
@@ -1,1 +1,12 @@
-
+category_encoders==2.6.3
+fuzzywuzzy==0.18.0
+matplotlib==3.9.0
+numpy==1.26.4
+pandas==2.1.1
+Pillow==10.3.0
+plotly==5.22.0
+requests==2.32.3
+scikit-learn==1.4.0
+seaborn==0.13.2
+streamlit==1.33.0
+sktime==0.26.0
